[package]
name = "world_scrambler"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.22"
serde = { version = "1.0", features = ["derive"] }
poll-promise = "0.3"
ureq = { version = "2.5.0", features = ["json"] }
rand = "0.8"
eframe = "0.29.1"
emath = "0.29.1"
regex = "1"
queues = "1.1.0"
reqwest = {version = "0.12.9", features =  ["blocking", "json", "native-tls"]}
tokio = {version = "1.41.1", features = ["full"]}
egui = "0.15"